--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
         menu:
           - text: "Take-home Exercise 1"
             href: "Take-Home-Exercise/Take-Home-Exercise_01.html"
+          - text: "Take-home Exercise 2"
+            href: "Take-Home-Exercise/Take-Home-Exercise_02.html"
     right: 
       - href: index.qmd
         text: Home
