--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
         menu:
           - text: "In-Class Exercise 1"
             href: "Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.html"
+          - text: "In-Class Exercise 4"
+            href: "In-Class_Ex/Hands-on_Ex_4/Hands-on_Ex_4.html"  
       - text: "Take-home Exercise"
         menu:
           - text: "Take-home Exercise 1"
